#pragma once

enum GameStates
{
    InMenu = 0,
    InSetup = 1,
    InGame = 2
};
